--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,22 @@ version: '3.3'
 services:
   parking:
     build: .
+    command: rails server -b 0.0.0.0
     volumes:
       - ./src:/usr/src
+    ports:
+      - 80:3000
     environment:
       PARKING-API_DATABASE_USERNAME: parking-api
       PARKING-API_DATABASE_PASSWORD: parking-api
       PARKING-API_DATABASE_HOST: db
       PARKING-API_DATABASE_PORT: 5432
+    depends_on:
+      - db
   db:
     image: postgres:9.6.15
     volumes:
-      ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
+      - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
     environment:
       POSTGRES_USER: parking-api
       POSTGRES_PASSWORD: parking-api
