--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,16 +8,13 @@ services:
     ports:
       - 80:3000
     environment:
-      PARKING-API_DATABASE_USERNAME: parking-api
-      PARKING-API_DATABASE_PASSWORD: parking-api
-      PARKING-API_DATABASE_HOST: db
-      PARKING-API_DATABASE_PORT: 5432
+      PARKINGAPI_DATABASE_USERNAME: postgres
+      PARKINGAPI_DATABASE_PASSWORD: postgres
+      PARKINGAPI_DATABASE_HOST: db
+      PARKINGAPI_DATABASE_PORT: 5432
     depends_on:
       - db
   db:
     image: postgres:9.6.15
     volumes:
-      - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
-    environment:
-      POSTGRES_USER: parking-api
-      POSTGRES_PASSWORD: parking-api
+      - ./init-user-db.sh:/docker-entrypoint-initdb.d/init-user-db.sh
