--- a/src/config/database.yml
+++ b/src/config/database.yml
@@ -25,23 +25,23 @@ default: &default
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  username: <%= ENV['PARKING-API_DATABASE_USERNAME'] %>
+  username: <%= ENV['PARKINGAPI_DATABASE_USERNAME'] %>
 
   # The password associated with the postgres role (username).
-  password: <%= ENV['PARKING-API_DATABASE_PASSWORD'] %>
+  password: <%= ENV['PARKINGAPI_DATABASE_PASSWORD'] %>
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  host: <%= ENV['PARKING-API_DATABASE_HOST'] %>
+  host: <%= ENV['PARKINGAPI_DATABASE_HOST'] %>
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  port: <%= ENV['PARKING-API_DATABASE_PORT'] %>
+  port: <%= ENV['PARKINGAPI_DATABASE_PORT'] %>
 
 development:
   <<: *default
-  database: parking-api_development
+  database: parkingapi_development
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: parking-api_test
+  database: parkingapi_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,4 +80,4 @@ test:
 #
 production:
   <<: *default
-  database: parking-api_production
+  database: parkingapi_production
