--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     ports:
       - 80:3000
     environment:
+      RAILS_ENV: development
       PARKINGAPI_DATABASE_USERNAME: postgres
       PARKINGAPI_DATABASE_PASSWORD: postgres
       PARKINGAPI_DATABASE_HOST: db
