--- a/src/Gemfile
+++ b/src/Gemfile
@@ -28,6 +28,9 @@ gem 'bootsnap', '>= 1.1.0', require: false
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
 # gem 'rack-cors'
 
+# Swagger implementation, more on https://github.com/rswag/rswag
+gem 'rswag', '~> 2.1.1'
+
 group :test do
   gem 'shoulda-matchers', '~> 3.0', require: false
   gem 'database_cleaner', '~> 1.5'
